A try at actual data toggle handling. Since we do not properly ensure that the toggle carry stays valid, we better make sure we set it correctly. Additionally even if the toggle carry wasn't clobbered, there are conditions the toggle is reset without the controller being able to notice (as in clearing a halt state). Since I don't have any OHCI hardware this is untested, but should fix bug #4067 if correct.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@32510 a95241bf-73f2-0310-859d-f6bbb57e9c96